fix: icon size and contrast issues

--- a/src/assets/styles/collections/_guidelines.css
+++ b/src/assets/styles/collections/_guidelines.css
@@ -141,11 +141,12 @@
     align-items: center;
     display: flex;
     gap: 1.3rem;
-}
 
-.barrier h2 svg {
-    block-size: 5rem;
-    inline-size: 5rem;
+    svg {
+        block-size: 5rem;
+        fill: var(--fl-fgColor, --color-black);
+        inline-size: 5rem;
+    }
 }
 
 .action-processes {
